# GNN_CO2_QN_assignment

./: .gitignore  README.md  pyproject.toml
src/: analyse_predictions.py  assignment.py  bootstrap.py  config.py  dataset.py  final_assignment.py  generate_figures.py  graph_builder.py  metrics.py  model.py  plotting.py  run_pipeline.py  train.py
